Create db module; Change board api doc; Game analyzer WIP;
